feat: 로컬 캐시 (Caffeine) 적용

--- a/src/main/resources/templates/url-shortener.html
+++ b/src/main/resources/templates/url-shortener.html
@@ -56,7 +56,7 @@
         })
             .then(response => response.json())
             .then(data => {
-                document.getElementById('shortUrl').value = window.location.origin + '/' + data.shortUrl;
+                document.getElementById('shortUrl').value = window.location.origin + '/go/' + data.shortUrl;
                 document.getElementById('resultBox').style.display = 'block';
             })
             .catch(error => {
